Fixing pom